# committor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  OLLAMA_GUIDE.md  PROJECT_SUMMARY.md  README.md  USAGE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs  demo.sh  test_ollama.sh
scripts/: install.sh
src/: commit.rs  diff.rs  lib.rs  main.rs  prompt.rs  providers.rs  types.rs
tests/: integration_tests.rs
