[package]
name = "committor"
version = "0.1.0"
edition = "2021"
description = "Automatically generate conventional commit messages based on git diff using AI"
authors = ["Simon Dickson <683945+simonhdickson@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/simonhdickson/committor"
keywords = ["git", "commit", "conventional", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "committor"
path = "src/main.rs"

[dependencies]
rig-core = "0.14"
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
git2 = "0.20"
regex = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "3.0"
thiserror = "2.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.20"
